# hope

./: .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  appveyor.yml
.github/workflows/: main.yml
cmake/: gtest_downloader.cmake
examples/: CMakeLists.txt  hello_world.cpp  main.cpp  producer_consumer.cpp  threaded_producer_consumer.cpp
lib/: CMakeLists.txt
lib/include/hope/: application.h  connection.h  event.h  eventhandler.h  eventloop.h  global.h  object.h  objectinvoker.h  signal.h  tcpserver.h  thread.h  threaddata.h  timer.h
lib/include/hope/private/: atomicwrapper.h  eventhandlerdata.h  filedescriptor.h  filedescriptorobserver.h  indexsequence.h  objectdata.h  optional.h  pollwrapper.h  queuedinvokationevent.h  threaddata.h
lib/src/: application.cpp  event.cpp  eventloop.cpp  object.cpp  objectinvoker.cpp  signal.cpp  tcpserver.cpp  thread.cpp  threaddata.cpp  timer.cpp
lib/src/private/: eventhandlerdata.cpp  filedescriptorobserver.cpp  objectdata.cpp  pollwrapper.cpp  threaddata.cpp
tests/: CMakeLists.txt  main.cpp  test_application.cpp  test_objectinvoker.cpp  test_signal.cpp  test_timer.cpp
tests/helpers/: applicationtesthelper.h  eventlooptesthelper.h
